--- a/package.json
+++ b/package.json
@@ -20,13 +20,36 @@
   },
   "homepage": "https://github.com/iamvane/nabiui_next#readme",
   "dependencies": {
+    "@material-ui/core": "^4.7.1",
+    "@types/axios": "^0.14.0",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
+    "axios": "^0.19.0",
     "next": "^9.1.4",
+    "next-compose-plugins": "^2.2.0",
+    "next-fonts": "^0.19.0",
+    "next-images": "^1.2.0",
+    "next-redux-wrapper": "^4.0.1",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@types/next-redux-wrapper": "^3.0.0",
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.15",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router-redux": "^5.0.18",
+    "@types/redux": "^3.6.0",
+    "@types/redux-persist": "^4.3.1",
+    "@types/redux-thunk": "^2.1.0",
     "typescript": "^3.7.3"
   }
 }
