--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-redux": "^4.0.8",
+    "react-string-replace": "^0.4.4",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
