--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.8",
     "react-string-replace": "^0.4.4",
     "redux": "^4.0.4",
@@ -47,6 +48,7 @@
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.15",
     "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.3",
     "@types/react-router-redux": "^5.0.18",
     "@types/redux": "^3.6.0",
     "@types/redux-persist": "^4.3.1",
