--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "next": "^9.1.4",
     "next-compose-plugins": "^2.2.0",
     "next-fonts": "^0.19.0",
@@ -33,6 +34,7 @@
     "next-redux-wrapper": "^4.0.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
@@ -47,6 +49,7 @@
     "@types/next-redux-wrapper": "^3.0.0",
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.15",
+    "@types/react-datepicker": "^2.9.5",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-router-redux": "^5.0.18",
