--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.0",
     "cropperjs": "^1.5.6",
+    "js-cookie": "^2.2.1",
+    "local-storage": "^2.0.0",
     "moment": "^2.24.0",
     "next": "^9.1.4",
     "next-compose-plugins": "^2.2.0",
+    "next-cookies": "^2.0.3",
     "next-fonts": "^0.19.0",
     "next-images": "^1.2.0",
     "next-redux-wrapper": "^4.0.1",
@@ -51,6 +54,7 @@
     "redux-thunk": "2.2.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.4",
     "@types/next-redux-wrapper": "^3.0.0",
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.15",
