--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/js-cookie": "^2.2.4",
     "@types/moment": "^2.13.0",
     "@types/react-places-autocomplete": "^7.2.5",
+    "@types/react-stripe-elements": "^6.0.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
@@ -48,6 +49,7 @@
     "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.8",
     "react-string-replace": "^0.4.4",
+    "react-stripe-elements": "^6.0.1",
     "redux": "3.7.2",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
