--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
   "dependencies": {
     "@material-ui/core": "^4.7.1",
     "@types/axios": "^0.14.0",
+    "@types/js-cookie": "^2.2.4",
     "@types/moment": "^2.13.0",
     "@types/react-places-autocomplete": "^7.2.5",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.0",
+    "cookies-js": "^1.2.3",
     "cropperjs": "^1.5.6",
+    "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
     "next": "^9.1.4",
     "next-compose-plugins": "^2.2.0",
