--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.0",
-    "cookies-js": "^1.2.3",
     "cropperjs": "^1.5.6",
+    "dotenv": "^8.2.0",
     "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
     "next": "^9.1.4",
