--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/iamvane/nabiui_next#readme",
   "dependencies": {
     "@material-ui/core": "^4.7.1",
+    "@material-ui/icons": "^4.5.1",
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^2.2.4",
     "@types/moment": "^2.13.0",
