--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "^0.19.0",
     "cropperjs": "^1.5.6",
     "js-cookie": "^2.2.1",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.24.0",
     "next": "^9.1.4",
     "next-compose-plugins": "^2.2.0",
@@ -53,7 +54,8 @@
     "redux": "3.7.2",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "2.2.0"
+    "redux-thunk": "2.2.0",
+    "superagent": "^5.1.3"
   },
   "devDependencies": {
     "@types/next-redux-wrapper": "^3.0.0",
