--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^16.12.0",
     "react-datepicker": "1.8.0",
     "react-dom": "^16.12.0",
+    "react-intersection-observer": "^8.25.2",
     "react-number-format": "^4.3.1",
     "react-places-autocomplete": "^7.2.1",
     "react-redux": "^7.1.3",
