--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
+    "@sentry/browser": "^5.11.1",
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^2.2.4",
     "@types/moment": "^2.13.0",
@@ -29,6 +30,7 @@
     "@types/react-stripe-elements": "^6.0.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-source-maps": "^0.0.3",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.0",
     "cropperjs": "^1.5.6",
