--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.8",
+    "react-share": "^4.0.1",
     "react-string-replace": "^0.4.4",
     "react-stripe-elements": "^6.0.1",
     "redux": "3.7.2",
