--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^16.12.0",
     "react-datepicker": "1.8.0",
     "react-dom": "^16.12.0",
+    "react-facebook": "^8.1.4",
     "react-intersection-observer": "^8.25.2",
     "react-number-format": "^4.3.1",
     "react-places-autocomplete": "^7.2.1",
