--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next-redux-wrapper": "^4.0.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
+    "react-countdown-now": "^2.1.2",
     "react-datepicker": "1.8.0",
     "react-dom": "^16.12.0",
     "react-facebook": "^8.1.4",
