--- a/package.json
+++ b/package.json
@@ -47,12 +47,14 @@
     "react": "^16.12.0",
     "react-datepicker": "1.8.0",
     "react-dom": "^16.12.0",
+    "react-facebook": "^8.1.4",
     "react-intersection-observer": "^8.25.2",
     "react-number-format": "^4.3.1",
     "react-places-autocomplete": "^7.2.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.8",
+    "react-share": "^4.0.1",
     "react-string-replace": "^0.4.4",
     "react-stripe-elements": "^6.0.1",
     "redux": "3.7.2",
