--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "cropperjs": "^1.5.6",
     "express": "^4.17.1",
     "js-cookie": "^2.2.1",
+    "lazysizes": "^5.2.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.24.0",
     "next": "^9.1.4",
     "next-compose-plugins": "^2.2.0",
     "next-fonts": "^0.19.0",
     "next-images": "^1.2.0",
+    "next-pwa": "^2.1.2",
     "next-redux-wrapper": "^4.0.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
