--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@zeit/next-source-maps": "^0.0.3",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.0",
+    "compression": "^1.7.4",
     "cropperjs": "^1.5.6",
     "express": "^4.17.1",
     "js-cookie": "^2.2.1",
