--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-facebook": "^8.1.4",
     "react-intersection-observer": "^8.25.2",
     "react-number-format": "^4.3.1",
+    "react-phone-number-input": "^3.0.22",
     "react-places-autocomplete": "^7.2.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
