[NM-267] trial progress

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.42",
     "@sentry/browser": "^5.11.1",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.4.0",
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^2.2.4",
     "@types/moment": "^2.13.0",
@@ -62,7 +64,6 @@
     "react-router-redux": "^4.0.8",
     "react-share": "^4.0.1",
     "react-string-replace": "^0.4.4",
-    "react-stripe-elements": "^6.0.1",
     "redux": "3.7.2",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
