--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "next-pwa": "^2.1.2",
     "next-redux-wrapper": "^4.0.1",
     "node-sass": "^4.13.0",
-    "react": "^16.12.0",
+    "react": "16.13.1",
     "react-countdown-now": "^2.1.2",
     "react-datepicker": "1.8.0",
     "react-dom": "^16.12.0",
