--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "compression": "^1.7.4",
     "cropperjs": "^1.5.6",
     "express": "^4.17.1",
+    "firebase": "^7.18.0",
     "js-cookie": "^2.2.1",
     "lazysizes": "^5.2.0",
     "lodash.debounce": "^4.0.8",
