--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lazysizes": "^5.2.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.24.0",
+    "nabi_web_components": "git+https://github.com/iamvane/nabi_web_components.git",
     "next": "^9.1.4",
     "next-compose-plugins": "^2.2.0",
     "next-fonts": "^0.19.0",
