--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cropperjs": "^1.5.6",
     "express": "^4.17.1",
     "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "lazysizes": "^5.2.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.24.0",
@@ -69,6 +70,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
     "redux-thunk": "2.2.0",
+    "stream-chat": "^3.12.1",
+    "stream-chat-react": "^6.4.2",
     "superagent": "^5.1.3"
   },
   "devDependencies": {
@@ -82,6 +85,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-persist": "^4.3.1",
     "@types/redux-thunk": "^2.1.0",
+    "css-loader": "^6.0.0",
     "typescript": "^3.7.3"
   }
 }
