--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next-redux-wrapper": "^4.0.1",
     "node-sass": "^4.13.0",
     "react": "^17.0.2",
+    "react-activity-feed": "^1.2.1",
     "react-countdown-now": "^2.1.2",
     "react-datepicker": "1.8.0",
     "react-dom": "^17.0.2",
