--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "compression": "^1.7.4",
     "cropperjs": "^1.5.6",
     "express": "^4.17.1",
+    "getstream": "^7.2.10",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "lazysizes": "^5.2.0",
@@ -87,6 +88,6 @@
     "@types/redux-persist": "^4.3.1",
     "@types/redux-thunk": "^2.1.0",
     "css-loader": "^6.0.0",
-    "typescript": "^3.7.3"
+    "typescript": "^4.2.4"
   }
 }
