Yarn UPGRADE + redux Upgrade

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.42",
-    "@sentry/browser": "^5.11.1",
+    "@sentry/browser": "^6.10.0",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.4.0",
     "@types/axios": "^0.14.0",
@@ -35,26 +35,30 @@
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "^0.0.3",
     "@zeit/next-typescript": "^1.1.1",
-    "axios": "^0.19.0",
+    "axios": "^0.21.1",
     "compression": "^1.7.4",
     "cropperjs": "^1.5.6",
     "express": "^4.17.1",
-    "js-cookie": "^2.2.1",
+    "getstream": "^7.2.10",
+    "js-cookie": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lazysizes": "^5.2.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.24.0",
     "nabi_web_components": "git+https://1192ab8f0ad3f1bf6bdac3086a250455aa38aa2d:x-oauth-basic@github.com/iamvane/nabi_web_components.git",
-    "next": "^9.5.5",
+    "next": "^11.0.1",
     "next-compose-plugins": "^2.2.0",
-    "next-fonts": "^0.19.0",
+    "next-fonts": "^1.5.1",
     "next-images": "^1.2.0",
-    "next-pwa": "^2.1.2",
-    "next-redux-wrapper": "^4.0.1",
-    "node-sass": "^4.13.0",
-    "react": "^17.0.1",
+    "next-plugin-antd-less": "^1.3.0",
+    "next-pwa": "^5.2.24",
+    "next-redux-wrapper": "^7.0.2",
+    "node-sass": "^6.0.1",
+    "react": "^17.0.2",
+    "react-activity-feed": "^1.2.1",
     "react-countdown-now": "^2.1.2",
-    "react-datepicker": "1.8.0",
-    "react-dom": "^16.12.0",
+    "react-datepicker": "4.1.1",
+    "react-dom": "^17.0.2",
     "react-facebook": "^8.1.4",
     "react-intersection-observer": "^8.25.2",
     "react-number-format": "^4.3.1",
@@ -65,23 +69,26 @@
     "react-router-redux": "^4.0.8",
     "react-share": "^4.0.1",
     "react-string-replace": "^0.4.4",
-    "redux": "3.7.2",
+    "redux": "4.1.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "2.2.0",
-    "superagent": "^5.1.3"
+    "redux-thunk": "2.3.0",
+    "stream-chat": "^3.12.1",
+    "stream-chat-react": "^6.4.6",
+    "superagent": "^6.1.0"
   },
   "devDependencies": {
     "@types/next-redux-wrapper": "^3.0.0",
-    "@types/node": "^12.12.14",
-    "@types/react": "^16.9.15",
-    "@types/react-datepicker": "1.8.0",
+    "@types/node": "^16.4.3",
+    "@types/react": "^17.0.15",
+    "@types/react-datepicker": "4.1.3",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-router-redux": "^5.0.18",
     "@types/redux": "^3.6.0",
     "@types/redux-persist": "^4.3.1",
     "@types/redux-thunk": "^2.1.0",
-    "typescript": "^3.7.3"
+    "css-loader": "^6.0.0",
+    "typescript": "^4.3.5"
   }
 }
