--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "next-plugin-antd-less": "^1.3.0",
     "next-pwa": "^5.2.24",
     "next-redux-wrapper": "^7.0.2",
-    "node-sass": "^6.0.1",
+    "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-activity-feed": "^1.2.1",
     "react-countdown-now": "^2.1.2",
