--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/iamvane/nabiui_next#readme",
   "dependencies": {
+    "@babel/core": "^7.15.0",
     "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.42",
+    "@reduxjs/toolkit": "https://pkg.csb.dev/reduxjs/redux-toolkit/commit/933aa4a1/@reduxjs/toolkit",
     "@sentry/browser": "^6.10.0",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.4.0",
@@ -53,7 +55,7 @@
     "next-plugin-antd-less": "^1.3.0",
     "next-pwa": "^5.2.24",
     "next-redux-wrapper": "^7.0.2",
-    "node-sass": "4.14.1",
+    "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-activity-feed": "^1.2.1",
     "react-countdown-now": "^2.1.2",
@@ -78,6 +80,7 @@
     "superagent": "^6.1.0"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.1.15",
     "@types/next-redux-wrapper": "^3.0.0",
     "@types/node": "^16.4.3",
     "@types/react": "^17.0.15",
@@ -89,6 +92,7 @@
     "@types/redux-persist": "^4.3.1",
     "@types/redux-thunk": "^2.1.0",
     "css-loader": "^6.0.0",
+    "sass": "^1.37.5",
     "typescript": "^4.3.5"
   }
 }
